--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "msglass",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://msglass.ademircix.com",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "npx serve@latest out",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,7 +15,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@types/node": "^20",
